hw3/srv1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srv1
spec:
  replicas: 2
  selector:
    matchLabels:
      run: srv1
  template:
    metadata:
      labels:
        run: srv1
    spec:
      containers:
        - name: srv1
          image: slezkin71/microservice:srv1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
