hw3/srv1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv1-service
spec:
  selector:
    app: srv1
  ports:
      - port: 8000
        targetPort: 8000
  type: ClusterIP
